kubernetes/base/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: shopsecure-prod
  labels:
    app: product-service
    monitoring: enabled
spec:
  selector:
    app: product-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
